Tried to better organize the html code, css sheet, and tried to fix the whitespace on the login page

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-
-.loginSpace{
+.login-space {
     height: 400px;
     border: 1px solid #333;
 }
@@ -7,25 +6,50 @@
     height: 300px;
     border: 1px solid #333; 
 }
-.inputBox{
-    
+.input-box{
+
     height: 300px;
     width: 300px;
     border: 1px solid #333; 
     flex-wrap: wrap;
-    
+
     display: flex;
     padding: 1rem;
+    padding-bottom: 5.5rem;
+    
 }
-.bottomSpacing{
-    margin-bottom: 3rem;
+.form-label{
+
+   
+    font-weight: bold;
+    white-space: nowrap;
+}
+.form-group {
+    display: block;
+    width: 100%;
+    
+    height: 40%;
+    margin-bottom: 5px;
+   
 }
 label{
+    display: inline-block;
     max-width: 100%;
+    margin-bottom: 5px;
+
     font-weight: bold;
-    display: inline-block;
-    margin-bottom: 0.5rem   
+    
 }
-.button{
-    display: inline-block;
+.form-control{
+    display: block;
+    width: 100%;
+    margin-bottom: 5px;
+    font-size: 14px;
+    
+}
+.button-block{
+    display: block;
+    width: 100%;
+    height:25%;
+    margin-bottom: 10px;
 }
